--- a/app/static/style.css
+++ b/app/static/style.css
@@ -103,3 +103,27 @@ a {
 a:hover {
     text-decoration: underline; /* Подчеркивание при наведении на ссылку */
 }
+
+#buttons-container {
+    margin-top: 20px; /* Отступ сверху для контейнера */
+    display: flex; /* Используем Flexbox для расположения кнопок в ряд */
+}
+
+.compact-button {
+    padding: 8px 12px; /* Уменьшенные отступы внутри кнопок */
+    background-color: #6a5acd; /* Фиолетовый цвет */
+    color: white;
+    border: none;
+    border-radius: 4px; /* Закругленные углы */
+    cursor: pointer;
+    margin-right: 10px; /* Отступ между кнопками */
+    font-size: 14px; /* Уменьшенный размер шрифта */
+}
+
+.compact-button:last-child {
+    margin-right: 0; /* Убираем отступ у последней кнопки */
+}
+
+.compact-button:hover {
+    background-color: #5c4eab; /* Темный фиолетовый при наведении */
+}
